(feat): add read_book comment add implementation
